# kavis-ui

./: AGENT.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  README.zh-CN.md  flake.nix  rehber.md
.claude/: COMPONENT_TEST_RULES.md  settings.local.json
.claude/skills/gpui-style-guide/: SKILL.md
.github/workflows/: pages.yml
.zed/: debug.json
crates/assets/: Cargo.toml  README.md
crates/assets/src/: lib.rs  native_assets.rs  wasm_assets.rs
crates/macros/: Cargo.toml
crates/macros/src/: derive_aksiyon.rs  derive_into_plot.rs  derive_ogeye_donus.rs  lib.rs
crates/story/: Cargo.toml
crates/story-web/: Cargo.toml  Makefile  README.md
crates/story-web/scripts/: build-wasm.sh
crates/story-web/src/: lib.rs
crates/story-web/www/: index.html  package.json  vite.config.js
crates/story-web/www/src/: main.js
crates/story/examples/: brush.rs  dock.rs  editor.rs  html.rs  large-text.rs  markdown.rs  stream_markdown.rs  tiles.rs
crates/story/examples/fixtures/: test.json  test.md  test.rs
crates/story/src/: app_menus.rs  gallery.rs  lib.rs  main.rs  stories.rs  themes.rs  title_bar.rs
crates/story/src/stories/: accordion_story.rs  alert_dialog_story.rs  alert_story.rs  avatar_story.rs  ayirici_story.rs  badge_story.rs  breadcrumb_story.rs  button_story.rs  calendar_story.rs  checkbox_story.rs  clipboard_story.rs  collapsible_story.rs  color_picker_story.rs  data_table_story.rs  date_picker_story.rs  description_list_story.rs  dialog_story.rs  divider_story.rs  dropdown_button_story.rs  editor_story.rs  form_story.rs  group_box_story.rs  hover_card_story.rs  icon_story.rs  image_story.rs  input_story.rs  kbd_story.rs  label_story.rs  list_story.rs  menu_story.rs  mod.rs  notification_story.rs  number_input_story.rs  otp_input_story.rs  pagination_story.rs  popover_story.rs  progress_story.rs  radio_story.rs  rating_story.rs  resizable_story.rs  (+20 more)
crates/story/src/stories/chart_story/: chart_story.rs  stacked_bar_chart.rs
crates/story/src/stories/theme_story/: checkerboard.rs  color_theme_story.rs  mapper.rs
crates/ui/: Cargo.toml
crates/ui/locales/: ui.yml
crates/ui/src/: accordion.rs  actions.rs  alert.rs  animation.rs  avatar.rs  badge.rs  bilesenler.rs  breadcrumb.rs  cekirdek.rs  chart.rs  checkbox.rs  clipboard.rs  collapsible.rs  color_picker.rs  description_list.rs  divider.rs  dock.rs  element_ext.rs  event.rs  focus_trap.rs  form.rs  geometry.rs  global_state.rs  gpui_turkce.rs  group_box.rs  history.rs  hover_card.rs  i18n.rs  icon.rs  index_path.rs  input.rs  inspector.rs  kbd.rs  label.rs  lib.rs  link.rs  list.rs  menu.rs  notification.rs  pagination.rs  (+26 more)
crates/ui/src/avatar/: avatar.rs  avatar_group.rs
crates/ui/src/bilesenler/: buton.rs  mod.rs
crates/ui/src/button/: button.rs  button_group.rs  button_icon.rs  dropdown_button.rs  toggle.rs
crates/ui/src/chart/: area_chart.rs  bar_chart.rs  candlestick_chart.rs  line_chart.rs  pie_chart.rs
crates/ui/src/dialog/: alert_dialog.rs  content.rs  description.rs  dialog.rs  footer.rs  header.rs  mod.rs  title.rs
crates/ui/src/dock/: dock.rs  invalid_panel.rs  panel.rs  stack_panel.rs  state.rs  tab_panel.rs  tiles.rs
crates/ui/src/form/: field.rs  form.rs
crates/ui/src/highlighter/: diagnostics.rs  highlighter.rs  languages.rs  registry.rs  wasm_stub.rs
crates/ui/src/input/: blink_cursor.rs  clear_button.rs  cursor.rs  element.rs  indent.rs  input.rs  lsp.rs  mask_pattern.rs  mod.rs  mode.rs  movement.rs  number_input.rs  otp_input.rs  popovers.rs  rope_ext.rs  search.rs  selection.rs  state.rs
crates/ui/src/list/: cache.rs  delegate.rs  list.rs  list_item.rs  loading.rs  separator_item.rs
crates/ui/src/menu/: app_menu_bar.rs  context_menu.rs  dropdown_menu.rs  (+3 more)
crates/webview/: Cargo.toml  README.md
crates/webview/src/: lib.rs
docs/: README.md  contributors.md  contributors.vue  gpui-component-0.5.1-initial-fork-map.md  gpui-component-2026-05-04-merge-map.md  index.md  index.vue  package.json  skills.md  skills.vue
docs/.vitepress/: config.mts
docs/data/: contributors.data.js  repo.data.js
docs/docs/: assets.md  element_id.md  getting-started.md  index.md  installation.md  root.md  theme.md
docs/docs/components/: accordion.md  alert-dialog.md  alert.md  avatar.md  badge.md  button.md  calendar.md  chart.md  checkbox.md  clipboard.md  collapsible.md  color-picker.md  data-table.md  date-picker.md  description-list.md  dialog.md  dropdown_button.md  editor.md  focus-trap.md  form.md  group-box.md  hover-card.md  icon.md  image.md  input.md  kbd.md  label.md  list.md  menu.md  notification.md  number-input.md  otp-input.md  pagination.md  plot.md  popover.md  progress.md  radio.md  rating.md  resizable.md  scrollable.md  (+17 more)
docs/zh-CN/: contributors.md  index.md  skills.md
docs/zh-CN/docs/: assets.md  context.md  element_id.md  getting-started.md  index.md  installation.md  root.md  theme.md
examples/: README.md  color_mix_oklab.rs
examples/app_assets/: Cargo.toml  README.md
examples/app_assets/src/: main.rs
examples/dialog_overlay/: Cargo.toml
examples/dialog_overlay/src/: main.rs
examples/focus_trap/: Cargo.toml
examples/focus_trap/src/: main.rs
examples/hello_world/: Cargo.toml
examples/hello_world/src/: main.rs
examples/input/: Cargo.toml
examples/input/src/: main.rs
examples/sidebar/: Cargo.toml
examples/sidebar/src/: main.rs
examples/system_monitor/: Cargo.toml
examples/system_monitor/src/: main.rs
examples/tooltip_top_edge/: Cargo.toml
examples/tooltip_top_edge/src/: main.rs
examples/webview/: Cargo.toml
examples/webview/src/: main.rs
examples/window_title/: Cargo.toml
examples/window_title/src/: main.rs
script/: build-web-dist.sh  install-wasm-bindgen-cli.sh  use-zed-git-deps.sh
themes/: adventure.json  alduin.json  asciinema.json  ayu.json  catppuccin.json  everforest.json  fahrenheit.json  flexoki.json  gruvbox.json  harper.json  hybrid.json  jellybeans.json  kibble.json  macos-classic.json  matrix.json  mellifluous.json  molokai.json  solarized.json  spaceduck.json  tokyonight.json  twilight.json
(+149 files in other folders)
