[workspace]
default-members = ["crates/ui", "crates/story", "crates/assets"]
members = [
    "crates/macros",
    "crates/story",
    "crates/story-web",
    "crates/ui",
    "crates/assets",
    "crates/webview",
    "examples/app_assets",
    "examples/hello_world",
    "examples/input",
    "examples/window_title",
    "examples/dialog_overlay",
    "examples/webview",
    "examples/system_monitor",
    "examples/focus_trap",
    "examples/tooltip_top_edge",
]
resolver = "2"

[workspace.package]
publish = false
edition = "2024"

[workspace.dependencies]
kavis-ui = { path = "crates/ui", version = "0.6.0" }
kavis-ui-macros = { path = "crates/macros", version = "0.6.0" }
kavis-ui-assets = { path = "crates/assets", version = "0.6.0" }
story = { path = "crates/story" }

# Pinned to the same Zed revision used by 0.232.3 for GPUI API stability.
gpui = { path = "../zed/crates/gpui" }
gpui_platform = { path = "../zed/crates/gpui_platform", features = ["font-kit", "runtime_shaders", "screen-capture", "wayland", "x11"] }
gpui_web = { path = "../zed/crates/gpui_web" }
gpui_macros = { path = "../zed/crates/gpui_macros" }
reqwest_client = { path = "../zed/crates/reqwest_client" }
sum-tree = { version = "0.2.0", package = "zed-sum-tree" }
# reqwest = { version = "0.12.8", package = "reqwest" }
reqwest = { git = "https://github.com/zed-industries/reqwest.git", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "multipart",
    "rustls-tls-native-roots",
    "socks",
    "stream",
], package = "reqwest", version = "0.12.8" }

anyhow = "1"
icu = { version = "2.2.0", features = ["compiled_data"] }
log = "0.4"
lsp-types = { version = "0.97.0", features = ["proposed"] }
notify = "8.2.0"
raw-window-handle = "0.6.2"
ropey = { version = "=2.0.0-beta.1", features = [
    "metric_lines_lf",
    "metric_utf16",
] }
rust-i18n = "4"
schemars = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
serde_repr = "0.1"
smallvec = "1"
smol = "2"
tracing = "0.1.44"
wasm-bindgen = "0.2.118"
writeable = "0.6"
# Use errno stub for WASM
errno = { version = "0.3.14", default-features = false }

[workspace.dependencies.windows]
features = ["Wdk", "Wdk_System", "Wdk_System_SystemServices"]
version = "0.62.2"

[workspace.lints.clippy]
almost_complete_range = "allow"
arc_with_non_send_sync = "allow"
borrowed_box = "allow"
dbg_macro = "deny"
let_underscore_future = "allow"
manual_is_multiple_of = "allow"
map_entry = "allow"
module_inception = "allow"
non_canonical_partial_ord_impl = "allow"
reversed_empty_ranges = "allow"
single_range_in_vec_init = "allow"
style = { level = "allow", priority = -1 }
todo = "deny"
type_complexity = "allow"
# Temporarily allow this until we can migrate to the new APIs.
# https://github.com/hakantr/kavis-ui/pull/2149
useless_conversion = "allow"

[profile.dev]
codegen-units = 16
debug = "limited"
split-debuginfo = "unpacked"

[profile.dev.package]
resvg = { opt-level = 3 }
rustybuzz = { opt-level = 3 }
taffy = { opt-level = 3 }
ttf-parser = { opt-level = 3 }
smol = { opt-level = 3 }
gpui = { opt-level = 3 }
gpui_platform = { opt-level = 3 }
gpui_macros = { opt-level = 3 }
tree-sitter = { opt-level = 3 }
sum_tree = { opt-level = 3 }
ropey = { opt-level = 3 }
lsp-types = { opt-level = 3 }
reqwest_client = { opt-level = 3 }
markdown = { opt-level = 3 }
xml5ever = { opt-level = 3 }

[workspace.metadata.typos]
files.extend-exclude = ["**/fixtures/*"]

[workspace.metadata.typos.default.extend-identifiers]
consts = "consts"

[workspace.metadata.cargo-machete]
ignored = ["log", "anyhow", "serde"]

# Patches for WASM compatibility
[patch.crates-io]
# Use stacker's psm version which may have better WASM support
psm = { git = "https://github.com/rust-lang/stacker", branch = "master" }

[patch."https://github.com/zed-industries/zed"]
gpui = { path = "../zed/crates/gpui" }
gpui_macros = { path = "../zed/crates/gpui_macros" }
gpui_shared_string = { path = "../zed/crates/gpui_shared_string" }
gpui_util = { path = "../zed/crates/gpui_util" }
collections = { path = "../zed/crates/collections" }
derive_refineable = { path = "../zed/crates/refineable/derive_refineable" }
http_client = { path = "../zed/crates/http_client" }
perf = { path = "../zed/tooling/perf" }
refineable = { path = "../zed/crates/refineable" }
scheduler = { path = "../zed/crates/scheduler" }
sum_tree = { path = "../zed/crates/sum_tree" }
util_macros = { path = "../zed/crates/util_macros" }
util = { path = "../zed/crates/util" }
zlog = { path = "../zed/crates/zlog" }
ztracing = { path = "../zed/crates/ztracing" }
ztracing_macro = { path = "../zed/crates/ztracing_macro" }
