[package]
name = "kavis-ui-assets"
description = "Default bundled assets for Kavis UI."
keywords = ["desktop", "gpui", "shadcn", "ui", "uikit"]
license = "Apache-2.0"
documentation = "https://hakantr.github.io/kavis-ui"
homepage = "https://hakantr.github.io/kavis-ui"
repository = "https://github.com/hakantr/kavis-ui"
readme = "README.md"
edition.workspace = true
publish = false
version = "0.1.0"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
kavis-ui.workspace = true
log.workspace = true

[target.'cfg(not(target_family = "wasm"))'.dependencies]
rust-embed = { version = "8.7.2", features = ["interpolate-folder-path", "include-exclude"] }

[target.'cfg(target_family = "wasm")'.dependencies]
reqwest = { workspace = true }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
