[package]
name = "kavis-ui-macros"
description = "Macros for Kavis UI."
version = "0.6.0"
license = "Apache-2.0"
publish = true
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
