[package]
name = "kavis-ui-macros"
description = "Macros for Kavis UI."
version = "0.1.0"
license = "Apache-2.0"
publish = false
edition.workspace = true

[lib]
proc-macro = true

[lints]
workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits"] }

[package.metadata.cargo-machete]
ignored = ["proc-macro2", "core-text"]
