[package]
name = "gpui-wry"
description = "WebView support for GPUI, based on Wry."
keywords = ["webview", "gpui","wry"]
license = "Apache-2.0"
documentation = "https://hakantr.github.io/kavis-ui"
homepage = "https://hakantr.github.io/kavis-ui"
repository = "https://github.com/hakantr/kavis-ui/tree/main/crates/webview"
readme = "README.md"
edition.workspace = true
publish = false
version = "0.1.0"

[features]
inspector = ["wry/devtools"]

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
gpui.workspace = true
wry = { version = "0.53.3", package = "lb-wry" }
