[package]
name = "dialog_overlay"
description = "An example of using kavis-ui to create a Dialog with overlay."
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
kavis-ui.workspace = true
kavis-ui-assets.workspace = true

[lints]
workspace = true
