[package]
name = "focus_trap"
description = "Example demonstrating focus trap functionality."
version = "0.6.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
kavis-ui = { workspace = true }

[lints]
workspace = true
