[package]
name = "tooltip_top_edge"
description = "Example demonstrating tooltip placement near the top window edge."
version = "0.1.0"
publish = false
edition.workspace = true

[dependencies]
anyhow.workspace = true
gpui.workspace = true
gpui_platform.workspace = true
kavis-ui = { workspace = true }

[lints]
workspace = true
